# kova

./: .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
libs/kova_math/: Cargo.toml
libs/kova_math/src/: lib.rs
programs/kova_scanner/: Cargo.toml
programs/kova_scanner/src/: contexts.rs  errors.rs  lib.rs  state.rs  utils.rs
programs/kova_scanner/src/instructions/: calculate_score.rs  initialize.rs  mod.rs  record_snapshot.rs  update_config.rs
sdk/: package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts  instructions.ts  types.ts
tests/: integration.test.ts  jest.config.js  scanner.test.ts
