[workspace]
members = [
    "programs/kova_scanner",
    "libs/kova_math",
    "cli",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.17.0"
kova-math = { path = "libs/kova_math" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
